# LLM-O-Meter

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json.example  LICENSE  README.md  build_mac.sh  build_win.bat
.agent/rules/: architecture.md  environment.md  qt_standards.md  style.md
.agent/workflows/: build.md
.claude/: settings.json
installer/: installer_windows.nsi
src/: AntiGravityClient.cpp  AntiGravityClient.h  AntiGravityData.h  AntiGravityProcessScanner.cpp  AntiGravityProcessScanner.h  CredentialManager.cpp  CredentialManager.h  FormatUtils.h  SettingsDialog.cpp  SettingsDialog.h  TrayManager.cpp  TrayManager.h  UsageApiClient.cpp  UsageApiClient.h  UsageData.h  UsagePopupWidget.cpp  UsagePopupWidget.h  UsageRateTracker.cpp  UsageRateTracker.h  main.cpp  stdafx.h
src/resources/: app.rc  resources.qrc
src/ui/: SettingsDialog.ui  UsagePopupWidget.ui
